# CellulAutomata

./: CMakeLists.txt  README.md
Application/: Application.cpp  Application.hpp  Widget.cpp  Widget.hpp
res/cell/: 01.cell  02.cell  03.cell  04.cell  05.cell  06.cell  07.cell  08.cell  09.cell
res/xml/: color.xml  speed.xml
src/: main.cpp
src/mainApplication/: CMakeLists.txt  mainApplication.cpp  mainApplication.hpp
